--- a/src/components/Card/card.module.scss
+++ b/src/components/Card/card.module.scss
@@ -4,9 +4,19 @@
     width: 220px;
     border-radius: 40px;
     margin-right: 30px;
+    transition: box-shadow 0.15s ease-in-out, transform 0.2s ease-in-out;
+    &:hover{
+        box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.05);
+        transform: translateY(-5px);
+    }
+    .favorite{
+        position: absolute;  
+        cursor: pointer;
+    }
     h5{
         font-weight: 400;
         font-size: 14px;
+        
     }
     .cardContent{
         display: flex;
@@ -37,3 +47,4 @@
     }
 
 }
+
