--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -20,6 +20,7 @@ body, html{
     list-style: none;
     outline: none;
     text-decoration: none;
+    font-family: 'Inter',system-ui;
 }
 
 .wrapper{
@@ -51,12 +52,120 @@ body, html{
         }
     }
     .content{
+        
         padding: 40px;
+        .title{
+            display: flex;
+            align-items: center;   
+            margin-bottom: 40px;
+            justify-content: space-between;
+            .searchBar{
+                border: 1px solid #F3F3F3;
+                border-radius: 10px;
+                display: flex;
+                align-items: center;
+                padding: 0 15px;
+                input{
+                    font-size: 16px;
+                    border: 0;
+                    padding: 13px;
+                    width: 200px;
+                }
+            }
+    
+        }
+        
+
+
         .sneakers{
             display: flex;
         }
-        h1{
-            margin-bottom: 40px;
+    }
+    .overlay{
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.1);
+        z-index: 1;    
+        .drawer{
+            display: flex;
+            flex-direction: column;
+            position: absolute;
+            width: 420px;
+            height: 100%;
+            right: 0;
+            background: #FFFFFF;
+            box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1);
+            padding: 30px;
+            h2{
+                font-style: 24px;
+                margin-bottom: 30px;
+            }
+
+            .cart{
+                flex: 1;
+                .cartItem{
+                    display: flex;
+                    align-items: center;
+                    border: 1px solid #F3F3F3;
+                    border-radius: 20px;
+                    overflow: hidden;
+                    margin-bottom: 25px;
+                    img{
+                        margin-right: 20px;
+                    }
+                    .itemPrice{
+                        margin-right: 20px;
+                        p{
+                            margin-bottom: 5px;
+                            font-size: 14px;
+                        }
+                        b{
+                            font-size: 16px;
+                        }
+                    }
+                    .remove{
+                        opacity: 0.4;
+                        &:hover{
+                            opacity: 1;
+                        }
+                    }
+                    
+                }
+            }
+
+
+
         }
+        .cartTotalBlock{
+            div{
+                flex: 1;
+                height: 1px;
+                border: 1px dashed #dfdfdf;
+                position: relative;
+                top: -4px;
+                margin: 0 7px;
+            }
+            li{
+                display: flex;
+                align-items: flex-end;
+                margin-bottom: 20px;
+            }
+        
+        }
+        button{
+            background: #9DD558;
+            border-radius: 18px;
+            border: 0;
+            padding: 20px;
+            font-weight: 600;
+            font-size: 16px;
+            line-height: 19px;
+            text-align: center;
+            color: #FFFFFF;
+        }
+        
     }
 }
