--- a/src/components/Card/card.module.scss
+++ b/src/components/Card/card.module.scss
@@ -4,6 +4,7 @@
     width: 220px;
     border-radius: 40px;
     margin-right: 30px;
+    margin-bottom: 30px;
     transition: box-shadow 0.15s ease-in-out, transform 0.2s ease-in-out;
     &:hover{
         box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.05);
@@ -34,6 +35,9 @@
             b{
                 font-size: 14px;
             }
+        }
+        img{
+            cursor: pointer;
         }
     }
     button{
