--- a/src/components/Drawer/Drawer.module.scss
+++ b/src/components/Drawer/Drawer.module.scss
@@ -7,6 +7,9 @@
   background-color: rgba(0, 0, 0, 0.1);
   z-index: 1;
   overflow: hidden;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
   .emptyCart {
     height: 100%;
     display: flex;
@@ -152,4 +155,10 @@
       }
     }
   }
+}
+
+
+.visible{
+  visibility: visible;
+  opacity: 1;
 }
