--- a/src/components/Card/card.module.scss
+++ b/src/components/Card/card.module.scss
@@ -1,54 +1,51 @@
-.card{
-    border: 1px solid #F3F3F3;
-    padding: 30px;
-    width: 220px;
-    border-radius: 40px;
-    margin-right: 30px;
-    margin-bottom: 30px;
-    transition: box-shadow 0.15s ease-in-out, transform 0.2s ease-in-out;
-    &:hover{
-        box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.05);
-        transform: translateY(-5px);
-    }
-    .favorite{
-        position: absolute;  
-        cursor: pointer;
-    }
-    h5{
-        font-weight: 400;
+.card {
+  border: 1px solid #f3f3f3;
+  padding: 30px;
+  width: 220px;
+  border-radius: 40px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+  transition: box-shadow 0.15s ease-in-out, transform 0.2s ease-in-out;
+  &:hover {
+    box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.05);
+    transform: translateY(-5px);
+  }
+  .favorite {
+    position: absolute;
+    cursor: pointer;
+  }
+  h5 {
+    font-weight: 400;
+    font-size: 14px;
+  }
+  .cardContent {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 14px;
+    .cardPrice {
+      display: flex;
+      flex-direction: column;
+      span {
+        font-size: 12px;
+        opacity: 0.5;
+        text-transform: uppercase;
+      }
+      b {
         font-size: 14px;
-        
+      }
     }
-    .cardContent{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-top: 14px;
-        .cardPrice{
-            display: flex;
-            flex-direction: column;
-            span{
-                font-size: 12px;
-                opacity: 0.5;
-                text-transform: uppercase;
-            }
-            b{
-                font-size: 14px;
-            }
-        }
-        img{
-            cursor: pointer;
-        }
+    img {
+      cursor: pointer;
     }
-    button{
-        background: #FFFFFF;
-        border: 1px solid #F2F2F2;
-        border-radius: 8px;
-        box-sizing: border-box;
-        height: 32px;
-        width: 32px;
-        cursor: pointer;
-    }
-
+  }
+  button {
+    background: #ffffff;
+    border: 1px solid #f2f2f2;
+    border-radius: 8px;
+    box-sizing: border-box;
+    height: 32px;
+    width: 32px;
+    cursor: pointer;
+  }
 }
-
