--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap");
 body,
 html {
+  height: 100%; 
   margin: 0;
   padding: 0;
   box-sizing: border-box;
